tests/ui/link-native-libs/link-attr-validation-early.stderr
error[E0539]: malformed `link` attribute input
  --> $DIR/link-attr-validation-early.rs:2:1
   |
LL | #[link]
   | ^^^^^^^ expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link-attribute>
help: try changing it to one of the following valid forms of the attribute
   |
LL | #[link(name = "...")]
   |       ++++++++++++++
LL | #[link(name = "...", import_name_type = "decorated|noprefix|undecorated")]
   |       +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
LL | #[link(name = "...", kind = "dylib|static|...")]
   |       +++++++++++++++++++++++++++++++++++++++++
LL | #[link(name = "...", kind = "dylib|static|...", wasm_import_module = "...", import_name_type = "decorated|noprefix|undecorated")]
   |       ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
   = and 1 other candidate

error[E0539]: malformed `link` attribute input
  --> $DIR/link-attr-validation-early.rs:3:1
   |
LL | #[link = "foo"]
   | ^^^^^^^^^^^^^^^ expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link-attribute>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[link = "foo"]
LL + #[link(name = "...")]
   |
LL - #[link = "foo"]
LL + #[link(name = "...", import_name_type = "decorated|noprefix|undecorated")]
   |
LL - #[link = "foo"]
LL + #[link(name = "...", kind = "dylib|static|...")]
   |
LL - #[link = "foo"]
LL + #[link(name = "...", kind = "dylib|static|...", wasm_import_module = "...", import_name_type = "decorated|noprefix|undecorated")]
   |
   = and 1 other candidate

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0539`.
